# trabalhoP3

./: README.md
lanchonete/: .env  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
lanchonete/lanchonete/: app.py  database.py  models.py  schemas.py  security.py
lanchonete/migrations/: env.py
lanchonete/migrations/versions/: 3638bee07099_configurando1.py  36a0737a3b7b_configurando3.py  3da175a62239_create_initial_table.py  6f245723008c_configurando4.py  8f0d08729151_configurando.py  a81925e7a7f3_configurando2.py
lanchonete/routers/: cliente.py  codigo_promocional.py  comanda.py  combo.py  produto.py
lanchonete/static/css/: comanda.css  css_prod_comb.css  gerenciamento_comanda.css  styleMain.css
lanchonete/static/js/: comanda.js  gerenciamento_comanda.js  main.js  script.js  script_prod_comb.js
lanchonete/templates/: cadastro.html  cadastro_prod_comb.html  comanda.html  gerenciamento_comanda.html  main.html  produtos.html
site-prog3/: TESTE.TXT  carrinho.css  carrinho.html  carrinho.js  gradienteAnimation.js  main.html  menu.css  menu.html  menu.js  styleMain.css
